--- a/src/assets/i18n/br.json
+++ b/src/assets/i18n/br.json
@@ -1,5 +1,10 @@
 {
   "Home":"Inicial",
+  "User Lever":"Nível do Usuário",
+  "Final data":"Data final",
+  "Initial date":"Data inicial",
+  "Transaction Type":"Tipo de transação",
+  
   "Personal": "persönli",
   "Dashboards": "Dashboards",
   "Dashboard 1": "Instrumententafel 1",
