--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,10 @@
 {
   "Home":"Inicial",
+  "User Lever":"User Lever",
+  "Final data":"Fecha final",
+  "Initial date":"Fechas iniciales",
+  "Transaction Type":"Tipo de Transacción",
+
   "Personal": "Personal",
   "Dashboards": "Cuadros de mando",
   "Dashboard 1": "Cuadros de mando 1",
